--- a/css/index.css
+++ b/css/index.css
@@ -47,7 +47,7 @@ a {
 }
 
 .title, .select-menu {
-    height: 50%;
+    height: fit-content;
     width: 100%;
     text-align: center;
     color: white;
@@ -144,9 +144,7 @@ a {
         display: none;
     }
 
-    .header {
-        padding: 10px 0 50px 0;
-    }
+
 }
 
 @keyframes header-appear {
