--- a/css/servers.css
+++ b/css/servers.css
@@ -53,7 +53,7 @@ a:hover {
 }
 
 .title, .select-menu {
-    height: 50%;
+    height: fit-content;
     width: 100%;
     text-align: center;
     color: white;
@@ -146,9 +146,7 @@ a:hover {
         display: none;
     }
 
-    .header {
-        padding: 10px 0 50px 0;
-    }
+
 }
 
 @keyframes header-appear {
