--- a/css/social.css
+++ b/css/social.css
@@ -46,7 +46,7 @@ a {
 }
 
 .title, .select-menu {
-    height: 50%;
+    height: fit-content;
     width: 100%;
     text-align: center;
     color: white;
@@ -151,9 +151,7 @@ a {
         display: none;
     }
 
-    .header {
-        padding: 10px 0 50px 0;
-    }
+
 }
 
 @keyframes header-appear {
